Added overview and time log via current user as student
