# ruby/db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2025_02_27_032845) do
+ActiveRecord::Schema[7.1].define(version: 2025_02_28_072623) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -50,6 +50,16 @@ ActiveRecord::Schema[7.1].define(version: 2025_02_27_032845) do
     t.index ["jti"], name: "index_jwt_denylists_on_jti"
   end
 
+  create_table "time_entries", force: :cascade do |t|
+    t.date "date", null: false
+    t.time "time", null: false
+    t.string "status", null: false
+    t.bigint "user_id", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["user_id"], name: "index_time_entries_on_user_id"
+  end
+
   create_table "users", force: :cascade do |t|
     t.string "email", default: "", null: false
     t.string "encrypted_password", default: "", null: false
@@ -83,4 +93,5 @@ ActiveRecord::Schema[7.1].define(version: 2025_02_27_032845) do
 
   add_foreign_key "active_storage_attachments", "active_storage_blobs", column: "blob_id"
   add_foreign_key "active_storage_variant_records", "active_storage_blobs", column: "blob_id"
+  add_foreign_key "time_entries", "users"
 end
